--- a/lab_python/python09_dict.ipynb
+++ b/lab_python/python09_dict.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMGfsHpTQIQSKfOfqQzCxYh",
+      "authorship_tag": "ABX9TyNded2arUtUQmU+jGrD8qDx",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -68,6 +68,565 @@
         "students = {100: '홍길동', 101: '오쌤', 200: 'Scott', 201: '홍길동'}\n",
         "print(type(students))\n",
         "print(students)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# dict_name[key] -> value를 반환\n",
+        "students[100]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 39
+        },
+        "id": "OC3QRMlwif7g",
+        "outputId": "0ecca534-135b-4eb7-9636-9e238d8ca56d"
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'홍길동'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 2
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# students[300]\n",
+        "#-> dict에 존재하지 않는 키를 사용하면 KeyError가 발생"
+      ],
+      "metadata": {
+        "id": "rSky906MiyX3"
+      },
+      "execution_count": 4,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# dict 메서드"
+      ],
+      "metadata": {
+        "id": "8wVWNpHZjLFA"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# dict_name.keys(): dict가 가지고 있는 키들의 리스트.\n",
+        "students.keys()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "axMqCzSAjfVo",
+        "outputId": "eb230b21-080b-4d6a-ba72-e84a31041e08"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "dict_keys([100, 101, 200, 201])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 5
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# dict_name.values(): dict가 가지고 있는 값들의 리스트.\n",
+        "students.values()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "SQ8kfXRfkSUg",
+        "outputId": "f17c11aa-bbeb-4756-9c0b-cab965bbabbb"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "dict_values(['홍길동', '오쌤', 'Scott', '홍길동'])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 6
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# dict_name.items(): (key, value) 튜플들의 리스트.\n",
+        "students.items()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "_zlryP61kf_Z",
+        "outputId": "f0ae86bc-dec8-4d6a-a5ba-e760dcedd666"
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "dict_items([(100, '홍길동'), (101, '오쌤'), (200, 'Scott'), (201, '홍길동')])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 7
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# dict_name.get(key): key에 해당하는 값(value)를 리턴(반환).\n",
+        "# dict_name[key]과 비슷. get() 메서드는 존재하지 않는 키일 때 에러가 발생하지 않음.\n",
+        "students.get(100)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 39
+        },
+        "id": "I1Djnrw-lR8Y",
+        "outputId": "6ccdaf67-4502-40a2-d5f0-1a0a37e99ab3"
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'홍길동'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 10
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "`dict_name[key] = value`\n",
+        "\n",
+        "*   key가 dict에 있을 때, key에 매핑된 값을 새로운 값으로 변경.\n",
+        "*   key가 dict에 없을 때, key-value 아이템을 dict에 추가.\n"
+      ],
+      "metadata": {
+        "id": "3elB-8cMmEOI"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(students)\n",
+        "students[201] = '김길동'  # 키가 존재할 때\n",
+        "print(students)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "wrqaZZBKmpIh",
+        "outputId": "0f43d827-2fd6-44c7-ca38-953c21584470"
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{100: '홍길동', 101: '오쌤', 200: 'Scott', 201: '홍길동'}\n",
+            "{100: '홍길동', 101: '오쌤', 200: 'Scott', 201: '김길동'}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "students[300] = 'King'  # 키가 존재하지 않을 때\n",
+        "print(students)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "kd79ciXYm0xx",
+        "outputId": "f7713b40-2d13-4338-8ee7-024b65960ba1"
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{100: '홍길동', 101: '오쌤', 200: 'Scott', 201: '김길동', 300: 'King'}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "students.items()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "GNkRQavRnD16",
+        "outputId": "a4d9c575-4394-456b-e5e4-87ec894814f6"
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "dict_items([(100, '홍길동'), (101, '오쌤'), (200, 'Scott'), (201, '김길동'), (300, 'King')])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 14
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# dict와 for 반복문"
+      ],
+      "metadata": {
+        "id": "S8Cs1RaenrhB"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# for-in 반복문에서 dict를 사용하면 key들을 순서대로 반복(iteration).\n",
+        "for k in students:\n",
+        "    print(k, ':', students[k])  # students.get(k)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Qt8qryRknxsy",
+        "outputId": "7f074232-bb27-492c-d849-ca7a0367ae86"
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "100 : 홍길동\n",
+            "101 : 오쌤\n",
+            "200 : Scott\n",
+            "201 : 김길동\n",
+            "300 : King\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for k, v in students.items():\n",
+        "    print(k, ':', v)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "3-Sc8zCxn5Ay",
+        "outputId": "0a1c9cb0-67e3-41c0-b013-31a6a335548b"
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "100 : 홍길동\n",
+            "101 : 오쌤\n",
+            "200 : Scott\n",
+            "201 : 김길동\n",
+            "300 : King\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "book = {'title': '파이썬 예제', 'author': '오쌤', 'price': 10_000}\n",
+        "print(book)\n",
+        "print(book['title'])\n",
+        "print(book.get('author'))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "NsQtIq3Xp71i",
+        "outputId": "2099d462-5820-4eba-ca0c-ab25b6f20485"
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{'title': '파이썬 예제', 'author': '오쌤', 'price': 10000}\n",
+            "파이썬 예제\n",
+            "오쌤\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for k, v in book.items():\n",
+        "    print(k, ':', v)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "xTHYFTU-rI5z",
+        "outputId": "815b3471-d6a4-4794-e099-f1af4cee8723"
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "title : 파이썬 예제\n",
+            "author : 오쌤\n",
+            "price : 10000\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# 다양한 타입의 자료들을 저장하는 dict"
+      ],
+      "metadata": {
+        "id": "pN854SXlrXqi"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "contact = {\n",
+        "    'id': 1,\n",
+        "    'name': '오쌤',\n",
+        "    'phone': ['010-0000-0000', '02-0000-0000', '02-1234-5678'],\n",
+        "    'email': {'company': 'jake@itwill.com', 'personal': 'jake@gmail.com'}\n",
+        "}\n",
+        "print(contact)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ZLgTtrVWrjTC",
+        "outputId": "f1485ba5-11a2-4b6b-c369-71d97933dc42"
+      },
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{'id': 1, 'name': '오쌤', 'phone': ['010-0000-0000', '02-0000-0000', '02-1234-5678'], 'email': {'company': 'jake@itwill.com', 'personal': 'jake@gmail.com'}}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "contact['id']  # contact.get('id')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "E04yglFHswT9",
+        "outputId": "d336c917-5f62-4ebb-b795-393c8845ee37"
+      },
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 23
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 첫번째 전화번호\n",
+        "contact['phone'][0]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 39
+        },
+        "id": "SLptYj7ltKBl",
+        "outputId": "ed065544-9079-4174-ab8d-3e59df032457"
+      },
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'010-0000-0000'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 28
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "contact.get('phone')[0]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 39
+        },
+        "id": "1vD0FXf1t0BF",
+        "outputId": "2c8eac33-0006-4700-d541-e74ae1e074ca"
+      },
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'010-0000-0000'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 32
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 회사 이메일\n",
+        "contact['email']['company']"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 39
+        },
+        "id": "AwBb6DnPuUIN",
+        "outputId": "92ff86a4-7448-4d43-f771-afe902e0ab48"
+      },
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'jake@itwill.com'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 34
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "contact.get('email').get('company')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 39
+        },
+        "id": "tKz9tgXtuiHr",
+        "outputId": "1482b19a-0c87-48ce-e79f-c31007627363"
+      },
+      "execution_count": 39,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'jake@itwill.com'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 39
+        }
       ]
     }
   ]
