--- a/lab_python/python09_dict.ipynb
+++ b/lab_python/python09_dict.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNded2arUtUQmU+jGrD8qDx",
+      "authorship_tag": "ABX9TyO86TMcMhWmUrq2puP/pihr",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -626,6 +626,123 @@
           },
           "metadata": {},
           "execution_count": 39
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Dictionary Comprehension"
+      ],
+      "metadata": {
+        "id": "oOSAANtezatk"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "emp_no = [1001, 1002, 1003, 1004]  # 사번\n",
+        "emp_name = ['Scott', 'Allen', 'King', '오쌤']  # 사원 이름\n",
+        "\n",
+        "employees = {}  # (사번, 이름) 아이템(key, value)을 저장하기 위한 빈 dict.\n",
+        "for no, name in zip(emp_no, emp_name):\n",
+        "    employees[no] = name\n",
+        "\n",
+        "print(employees)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "1ILdRGdsze0t",
+        "outputId": "84067def-baef-4229-8d09-9a8a8b2bcf7f"
+      },
+      "execution_count": 40,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{1001: 'Scott', 1002: 'Allen', 1003: 'King', 1004: '오쌤'}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "employees2 = {no: name for no, name in zip(emp_no, emp_name)}\n",
+        "print(employees2)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "936EJu3L14gF",
+        "outputId": "8d383e8f-5941-4bd2-ce60-955028ca8364"
+      },
+      "execution_count": 41,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{1001: 'Scott', 1002: 'Allen', 1003: 'King', 1004: '오쌤'}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "fruits = ['apple', 'banana', 'cherry', 'dragonfruit', 'pineapple', 'watermellon']\n",
+        "\n",
+        "# fruit_lengths: 과일 이름을 키로 하고, 글자수를 값으로 하는 dict\n",
+        "fruit_lengths = {}  # name(key)-length(value)를 저장하기 위한 빈 dict\n",
+        "for x in fruits:\n",
+        "    fruit_lengths[x] = len(x)\n",
+        "\n",
+        "print(fruit_lengths)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "-KiFdXvC2MDe",
+        "outputId": "d7036b24-2309-41b0-a782-382edbd6cf2c"
+      },
+      "execution_count": 42,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{'apple': 5, 'banana': 6, 'cherry': 6, 'dragonfruit': 11, 'pineapple': 9, 'watermellon': 11}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "lengths = {k: len(k) for k in fruits}\n",
+        "print(lengths)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "h4mWOd0O4Dtf",
+        "outputId": "a9ae669a-8721-4e67-e694-b2b7cad66403"
+      },
+      "execution_count": 43,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{'apple': 5, 'banana': 6, 'cherry': 6, 'dragonfruit': 11, 'pineapple': 9, 'watermellon': 11}\n"
+          ]
         }
       ]
     }
