--- a/lab_python/python10_error.ipynb
+++ b/lab_python/python10_error.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyM28+9gc6FjT9bZiMW+dniD",
+      "authorship_tag": "ABX9TyOJW4j458IqFPFx/fcvZhRv",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -158,10 +158,12 @@
         "    print(f'{x} - {y} = {x - y}')\n",
         "    print(f'{x} x {y} = {x * y}')\n",
         "    print(f'{x} / {y} = {x / y}')\n",
-        "except ValueError:\n",
+        "except ValueError as e:\n",
         "    print('x와 y는 정수로 입력해야 합니다.')\n",
-        "except ZeroDivisionError:\n",
+        "    print(e)\n",
+        "except ZeroDivisionError as e:\n",
         "    print('0으로 나눌 수는 없습니다.')\n",
+        "    print(e)\n",
         "else:\n",
         "    print('사칙 연산을 모두 수행했습니다.')\n",
         "finally:\n",
@@ -172,9 +174,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ZOiV3z1rEAFR",
-        "outputId": "30123300-38fe-40b8-b699-d53f8022737e"
+        "outputId": "3ce77e42-1d66-45a9-fa02-50621736f702"
       },
-      "execution_count": 14,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
@@ -186,7 +188,115 @@
             "123 - 0 = 123\n",
             "123 x 0 = 0\n",
             "0으로 나눌 수는 없습니다.\n",
+            "division by zero\n",
             "코드 셀 종료\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import random"
+      ],
+      "metadata": {
+        "id": "_IpuJHU9OyT0"
+      },
+      "execution_count": 17,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "numbers = [random.randrange(100) for _ in range(10)]\n",
+        "print(numbers)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "y1-1mrWWO0VO",
+        "outputId": "24707ea1-a2cf-4f67-bb92-076fd574f0ae"
+      },
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[26, 98, 61, 95, 38, 86, 6, 27, 0, 5]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "try:\n",
+        "    index = int(input('인덱스 입력>> '))\n",
+        "    print(f'numbers[{index}] = {numbers[index]}')\n",
+        "except:\n",
+        "    print('잘못된 인덱스를 입력했습니다.')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "NBnaFc4NO-aU",
+        "outputId": "ebfcb8cd-a898-4e19-d0dd-08773d7c579e"
+      },
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "인덱스 입력>> 100\n",
+            "잘못된 인덱스를 입력했습니다.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "사용자에게 숫자(실수, float)를 입력하는 프롬프트를 보여주고,\n",
+        "\n",
+        "*   사용자가 입력한 문자열이 숫자로 변환될 수 있는 경우에는, 그 숫자를 출력하고 종료.\n",
+        "*   사용자가 입력한 문자열이 숫자로 변환될 수 없는 경우에는, 숫자를 입력하라는 프롬트프를 다시 보여줌.\n"
+      ],
+      "metadata": {
+        "id": "tw_SL2lhRYNk"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "while True:\n",
+        "    try:\n",
+        "        number = float(input('숫자 입력>> '))\n",
+        "        print(f'number = {number}')\n",
+        "        break\n",
+        "    except:\n",
+        "        print('입력값은 숫자여야 합니다.')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "B6dd-gX-Sa-M",
+        "outputId": "feb63fdb-a7e2-4ff6-9cba-5be3cc84409b"
+      },
+      "execution_count": 35,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "숫자 입력>> q\n",
+            "입력값은 숫자여야 합니다.\n",
+            "숫자 입력>> 1\n",
+            "number = 1.0\n"
           ]
         }
       ]
