함수 선언과 호출

--- a/lab_python/python11_function.ipynb
+++ b/lab_python/python11_function.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNN9Fyeg8gJp81tHasV2+bE",
+      "authorship_tag": "ABX9TyMdKbmMxX1iUSVCb/V94k79",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -120,6 +120,206 @@
       "metadata": {
         "id": "gcbvRtsF-okc"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 함수 정의(선언)\n",
+        "def subtract(x, y):\n",
+        "    \"\"\"숫자 x, y를 전달 받아서 x - y를 반환하는 함수.\"\"\"\n",
+        "    return x - y"
+      ],
+      "metadata": {
+        "id": "l8WX7P_dEU48"
+      },
+      "execution_count": 7,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "result = subtract(2, 1)  # 함수 호출(call, invoke)\n",
+        "print(result)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "DSmRqn_hFBX-",
+        "outputId": "c810c949-7259-423e-9334-47aa4d9a2407"
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 값을 반환하지 않는 함수"
+      ],
+      "metadata": {
+        "id": "KODkX5j-H1n1"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def repeat_message(msg, n):\n",
+        "    \"\"\"\n",
+        "    msg를 n번 반복해서 출력.\n",
+        "\n",
+        "    @param msg - 출력할 문자열.\n",
+        "    @param n - 반복해서 출력할 횟수. 0 또는 양의 정수.\n",
+        "    \"\"\"\n",
+        "    for _ in range(n):\n",
+        "        print(msg)\n",
+        "\n",
+        "    # return None"
+      ],
+      "metadata": {
+        "id": "WoZx-QIUH5aW"
+      },
+      "execution_count": 9,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "repeat_message('안녕하세요', 3)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "FgqMorFcI_Ip",
+        "outputId": "cce76afb-a500-43b0-f783-176409090d89"
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "안녕하세요\n",
+            "안녕하세요\n",
+            "안녕하세요\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "repeat_message('Hello, Python!', 5)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "qofcLM_mJY7H",
+        "outputId": "f6b85789-e0e0-41cf-e054-7eda5eff6328"
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hello, Python!\n",
+            "Hello, Python!\n",
+            "Hello, Python!\n",
+            "Hello, Python!\n",
+            "Hello, Python!\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 2개 이상의 값을 반환하는 함수"
+      ],
+      "metadata": {
+        "id": "YhL75uYsKMLu"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def plus_and_minus(x, y):\n",
+        "    \"\"\"\n",
+        "    x + y, x - y를 반환.\n",
+        "\n",
+        "    @param x - 숫자 타입(int 또는 float).\n",
+        "    @param y - 숫자 타입(int 또는 float).\n",
+        "    @return x + y, x - y\n",
+        "    \"\"\"\n",
+        "    return x + y, x - y"
+      ],
+      "metadata": {
+        "id": "Zm_2mqooJgP-"
+      },
+      "execution_count": 12,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a, b = plus_and_minus(1.0, 2.0)\n",
+        "print(f'a={a}, b={b}')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "J5RPSEMNK5Ex",
+        "outputId": "49256fb6-75c8-4390-c01c-615a11f20ba2"
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "a=3.0, b=-1.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "result = plus_and_minus(3, 7)\n",
+        "print(result)  # result의 데이터 타입: tuple\n",
+        "print(result[0])\n",
+        "print(result[1])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "M7HnIU4EL0qP",
+        "outputId": "49b8a15f-a538-4c0f-c3aa-6d933b43a860"
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "(10, -4)\n",
+            "10\n",
+            "-4\n"
+          ]
+        }
+      ]
     }
   ]
 }
