--- a/lab_python/python11_function.ipynb
+++ b/lab_python/python11_function.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMdKbmMxX1iUSVCb/V94k79",
+      "authorship_tag": "ABX9TyNM2zphsOvzkCCLqOOLRs31",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -298,8 +298,8 @@
       "source": [
         "result = plus_and_minus(3, 7)\n",
         "print(result)  # result의 데이터 타입: tuple\n",
-        "print(result[0])\n",
-        "print(result[1])"
+        "print(result[0])  # tuple의 첫번째 원소\n",
+        "print(result[1])  # tuple의 두번째 원소"
       ],
       "metadata": {
         "colab": {
@@ -320,6 +320,71 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 함수 선언과 호출 연습"
+      ],
+      "metadata": {
+        "id": "AzqYFAc5NT5h"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Ex. 1\n",
+        "\n",
+        "*   함수 이름: make_list\n",
+        "*   기능: [start, end) 범위의 정수 난수 n개를 아이템으로 갖는 리스트를 반환.\n",
+        "*   파라미터: start(정수), end(정수), n(0 또는 양의 정수)\n",
+        "*   반환값: 정수 난수들의 리스트.\n"
+      ],
+      "metadata": {
+        "id": "Il6gRn6iNaU3"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Ex. 2\n",
+        "\n",
+        "*   함수 이름: calculate_sum\n",
+        "*   기능: 숫자(정수 또는 실수)들을 원소로 갖는 리스트를 전달받아서, 그 리스트의 모든 원소들의 합을 리턴.\n",
+        "*   파라미터: array(숫자들의 리스트).\n",
+        "*   반환값: 리스트 array의 모든 원소들의 합계.\n"
+      ],
+      "metadata": {
+        "id": "JEzf9Z1dNz8f"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Ex. 3\n",
+        "\n",
+        "*   함수 이름: calculate_mean\n",
+        "*   기능: 숫자들을 원소로 갖는 리스트의 원소들의 평균을 리턴.\n",
+        "*   파라미터: array(숫자들의 리스트).\n",
+        "*   반환값: 리스트 array의 모든 원소들의 평균.\n"
+      ],
+      "metadata": {
+        "id": "6nGeiGkiONX3"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Ex. 4\n",
+        "\n",
+        "*   함수 이름: find_min_and_max\n",
+        "*   기능: 숫자들을 원소로 갖는 리스트에서 최솟값과 최댓값을 찾아서 리턴.\n",
+        "*   파라미터: array(숫자들의 리스트).\n",
+        "*   반환값: 리스트 array에서 최솟값, 최댓값.\n"
+      ],
+      "metadata": {
+        "id": "7VNFwZimOf7X"
+      }
     }
   ]
 }
