함수 선언과 호출 연습

--- a/lab_python/python11_function.ipynb
+++ b/lab_python/python11_function.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNM2zphsOvzkCCLqOOLRs31",
+      "authorship_tag": "ABX9TyNT6TSkxM/AygAslUdGp75w",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -331,6 +331,17 @@
       }
     },
     {
+      "cell_type": "code",
+      "source": [
+        "import random"
+      ],
+      "metadata": {
+        "id": "_oBkZkY2Sc75"
+      },
+      "execution_count": 16,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "### Ex. 1\n",
@@ -343,6 +354,56 @@
       "metadata": {
         "id": "Il6gRn6iNaU3"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def make_list(start, end, n):\n",
+        "    \"\"\"\n",
+        "    start 이상 end 미만의 정수 난수 n개를 아이템으로 갖는 리스트를 리턴.\n",
+        "\n",
+        "    @param start - int. 난수 시작 범위.\n",
+        "    @param end - int. 난수 종료 범위.\n",
+        "    @param n - 리스트의 아이템 개수(난수 개수). 0 또는 양의 정수.\n",
+        "    @return 정수 난수 n개를 갖는 리스트.\n",
+        "    \"\"\"\n",
+        "\n",
+        "    # numbers = []\n",
+        "    # for _ in range(n):\n",
+        "    #     numbers.append(random.randrange(start, end))\n",
+        "    numbers = [random.randrange(start, end) for _ in range(n)]\n",
+        "\n",
+        "    return numbers"
+      ],
+      "metadata": {
+        "id": "YzZrMMttrWIO"
+      },
+      "execution_count": 17,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "rand_numbers = make_list(0, 10, 5)\n",
+        "print(rand_numbers)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "AUn4GlLGt4FW",
+        "outputId": "3028f07e-57a6-423c-e0ad-f4c2d296ed52"
+      },
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[5, 5, 1, 8, 6]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -359,6 +420,81 @@
       }
     },
     {
+      "cell_type": "code",
+      "source": [
+        "def calculate_sum(array):\n",
+        "    \"\"\"\n",
+        "    숫자들의 리스트 array의 모든 원소들의 합을 리턴.\n",
+        "\n",
+        "    @param array - 숫자들을 원소로 갖는 리스트.\n",
+        "    @return array의 모든 원소들의 합.\n",
+        "    \"\"\"\n",
+        "\n",
+        "    total = 0\n",
+        "    for x in array:\n",
+        "        total += x\n",
+        "\n",
+        "    return total"
+      ],
+      "metadata": {
+        "id": "ySXip--3vr6u"
+      },
+      "execution_count": 33,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "calculate_sum([1, 2, 3])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "kE8r3fzWw643",
+        "outputId": "557aedb0-0d15-4ebe-e51f-e2f8d11a15c3"
+      },
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "6"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 34
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "calculate_sum(rand_numbers)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "iEbdghFexB9W",
+        "outputId": "72b28c02-a482-46b7-f391-79a390e005cb"
+      },
+      "execution_count": 35,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "25"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 35
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "### Ex. 3\n",
@@ -373,6 +509,53 @@
       }
     },
     {
+      "cell_type": "code",
+      "source": [
+        "def calculate_mean(array):\n",
+        "    \"\"\"\n",
+        "    숫자들의 리스트 array의 원소들의 평균을 리턴.\n",
+        "\n",
+        "    @param array - 숫자들을 원소로 갖는 리스트.\n",
+        "    @return array 원소들의 평균.\n",
+        "    \"\"\"\n",
+        "\n",
+        "    mean = calculate_sum(array) / len(array)\n",
+        "\n",
+        "    return mean"
+      ],
+      "metadata": {
+        "id": "S7JjX6tR0NPB"
+      },
+      "execution_count": 36,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "calculate_mean(rand_numbers)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "1OiISL9q1Mmv",
+        "outputId": "053b7040-1f67-4432-a544-d3bcbc13b02a"
+      },
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "5.0"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 37
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "### Ex. 4\n",
@@ -385,6 +568,59 @@
       "metadata": {
         "id": "7VNFwZimOf7X"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def find_min_and_max(array):\n",
+        "    \"\"\"\n",
+        "    숫자들의 리스트 array 원소들 중에서 최솟값과 최댓값을 리턴.\n",
+        "\n",
+        "    @param array - 숫자들을 저장하는 리스트.\n",
+        "    @return 최솟값, 최댓값\n",
+        "    \"\"\"\n",
+        "\n",
+        "    min_value = array[0]\n",
+        "    max_value = array[0]\n",
+        "    for x in array:\n",
+        "        if x > max_value:\n",
+        "            max_value = x\n",
+        "        if x < min_value:\n",
+        "            min_value = x\n",
+        "\n",
+        "    return min_value, max_value"
+      ],
+      "metadata": {
+        "id": "3jUE8Yif2TqP"
+      },
+      "execution_count": 38,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "find_min_and_max(rand_numbers)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "b_vb8WIj3TY4",
+        "outputId": "44a1eeac-88c3-4512-da98-3accbbe9b30f"
+      },
+      "execution_count": 39,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(1, 8)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 39
+        }
+      ]
     }
   ]
 }
